test/success/integration/_succ_actarg_2.hs
x :: Int -> Int
x y = y
y' :: Int
y' = x 3
main = print "hello"