test/fail/integration/_fail_sem_expr_uminus_1.hs
x :: Int
x = -'c'
main = print "hello"